Squashed commit of the following:
commit fcd64e2c77ec82f217108c597f2ae9d8f4efd6ae
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 19:18:35 2021 +0100

    Fix ChunkWriter conflict part 3

commit 04224b8678a377c7541fe9e09fcb459c9a910770
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 11:25:47 2021 +0100

    Fix ChunkWriter conflict part 2

commit 286e5d9861dfaa4e6e6d29d1744bacaeef46a364
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 11:14:10 2021 +0100

    MinecraftServer: Rename shutdown to tick

commit 4f5ee0e4d95cf0cdc5eee2688248facc3d4f22e1
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 11:05:48 2021 +0100

    Fix ChunkWriter conflict

commit a76f84c42f6bfd65b5ee2e35794ca8e308199494
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 10:49:02 2021 +0100

    Delete MAINTAINERS

commit b136c29a106bf31f68a2325f30f63e25fc0ea26e
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 10:48:55 2021 +0100

    Update dependencies

commit f148fe2c9f7c3601c7155a3b68464c159722c549
Author: Grayray75 <69988482+Grayray75@users.noreply.github.com>
Date:   Wed Dec 1 10:48:08 2021 +0100

    Add minecraft version to issue template

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+# Enigma >= 1.2.0 requires Java 16
 enigma_version=1.0.0
 stitch_version=0.6.1
 # Loader is only used by javadoc generation/linking
-fabric_loader_version=0.11.1
+fabric_loader_version=0.12.8
