--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
-      matrix: 
+      matrix:
         mc_version: [
           '1.3.2',
           '1.4.7',
@@ -32,7 +32,8 @@ jobs:
 
       - uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 'wrapper'
+          gradle-version: '7.2.x'
+          cache-read-only: ${{ matrix.mc_version != "1.8.9" }}
 
       - run: gradle build javadocJar checkMappings mapNamedJar unifyMappings --stacktrace
       - run: gradle publishToMavenLocal unifyMappings --stacktrace
