--- a/.github/workflows/publish-main.yml
+++ b/.github/workflows/publish-main.yml
@@ -74,13 +74,15 @@ jobs:
         MC_VERSION: ${{ matrix.mc_version }}
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
-      - uses: actions/setup-java@v2
+      - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: python ./yarn.py $MC_VERSION publish --stacktrace
+
+      - uses: gradle/gradle-build-action@v2
+        with:
+          cache-read-only: true
+
+      - run: gradle publish --stacktrace
         env:
           MAVEN_PUBLISH_CREDENTIALS: ${{ secrets.MAVEN_PUBLISH_CREDENTIALS }}
